Reduce memory footprint, speed up parsing
* Use ArrayList of exactly the required size (-> less memory, faster in the mapping step)
* Resolve references during line parsing if possible ( -> less memory, faster in the mapping step)
* Only store full line in IFCVO if we want to deduplicate ( -> less memory)
* refactor code to reduce code duplication
* requires changes to IfcParserLib, which is a transitive dependency of ExpressToOwl, so that project's pom is required to change, too.